# ros-package-template

./: README.md
ROS_package_template/: CMakeLists.txt  package.xml
ROS_package_template/cfg/: ExampleConfig.cfg
ROS_package_template/include/your_ros_package/: __init__.py  your_module.py
ROS_package_template/launch/: your_sensor_driver.launch
ROS_package_template/msg/: CustomMsg.msg
ROS_package_template/src/: your_sensor_driver_node.py
ROS_package_template/srv/: CustomService.srv
