<?xml version="1.0"?>
<package format="2">
  <name>your_ros_package</name>
  <version>0.1.0</version>
  <description>Your ROS package description</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>  <!-- Add any other build dependencies here -->

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>  <!-- Add any other runtime dependencies here -->

  <!-- Additional export tags if needed -->
  <!-- <export> ... </export> -->
</package>
